# PIM-OFIS

./: .gitignore  README.md  download_dataset.sh  exp_all.sh  gnuplot-script.plt
PageRank/: Makefile  pg_test_all.sh
PageRank/header/: common.h  host.h
PageRank/scripts/: analyze_ofis.py  analyze_sdk.py  analyze_speedup_ofis_sdk.py  make_ofis_result.sh  make_sdk_result.sh  make_speedup_result.sh  mram_exec.sh  ofis_dpu_exec.sh  ofis_ig_exec.sh  ofis_rank_exec.sh  order_file.py  wram_exec.sh
PageRank/src/: preProc.c  readInput.c
PageRank/src/pr/origin_sdk/: main.c  pr_host.c  pr_kernel.c
PageRank/src/pr/w_ofis/: main.c  pr_host.c  pr_kernel.c
PageRank/src/pr/wram_sdk/: main.c  pr_host.c  pr_kernel.c
SpMV/: spmv_test_all.sh
SpMV/SpMV_OFIS/: CSR_dpu.c  CSR_host_OFIS_ig.c  CSR_host_OFIS_rank.c  OFIS_ig256.sh  OFIS_ig512.sh  OFIS_rank256.sh  OFIS_rank512.sh  test_all.sh
SpMV/SpMV_OFIS/includes/: common.h  types.h
SpMV/SparseP_ES/: CSR_dpu.c  CSR_host.c  DCSR256.sh  DCSR512.sh  test_all.sh
SpMV/SparseP_ES/includes/: types.h  utils.h
SpMV/SparseP_EW/: CSR_dpu.c  CSR_host.c  RBDCSR256.sh  RBDCSR512.sh
SpMV/SparseP_EW/includes/: common.h  matrix.h  params.h  partition.h  timer.h  utils.h
SpMV/scripts/: analyze_es.py  analyze_ew.py  analyze_ofis.py  analyze_speedup_ofis.py  analyze_speedup_ofis_es.py  analyze_speedup_ofis_ew.py  make_es_results.sh  make_ew_results.sh  make_ofis_results.sh  make_speedup_results.sh
ofis/: ofis.h
ofis-source/backends/: CMakeLists.txt  compile_commands.json  load.sh
ofis-source/backends/api/include/api/: dpu_error.h
ofis-source/backends/api/src/api/: dpu_fifo.c  dpu_loader.c  dpu_runner.c  dpu_set.c  dpu_thread_job.c
ofis-source/backends/api/src/api/include/: dpu_polling.h
ofis-source/backends/api/src/include/: dpu_elf_internals.h  profiling_internals.h
ofis-source/backends/commons/include/: dpu_rank.h
ofis-source/backends/hw/src/mappings/xeon_sp/: xeon_sp_translation.c
ofis-source/backends/java/: pom.xml
ofis-source/backends/python/: CMakeLists.txt
ofis-source/backends/ufi/src/: ufi.c  ufi_bank_interface_pmc.c  ufi_ci.c  ufi_config.c  ufi_dma_wavegen_config.c
ofis-source/backends/verbose/src/: verbose_control.c
ofis-source/dpu-rt/: CMakeLists.txt
ofis-source/dpu-rt/src/syslib/: udiv32.c  wramfifo.c
sdk/upmem-2024.2.0-Linux-x86_64/include/dpu/: dpu.h  dpu_vpd.h
sdk/upmem-2024.2.0-Linux-x86_64/lib/: libLTO.so.12  libdpu-ufi.so.2024.2  libdpuhw.so.2024.2  libdpujni.so.2024.2  libdputracecommons.so.2024.2  libdpuverbose.so.2024.2  libdpuvpd.so.2024.2
sdk/upmem-2024.2.0-Linux-x86_64/share/pkgconfig/: dpu.pc
sdk/upmem-2024.2.0-Linux-x86_64/share/upmem/: version
sdk/upmem-2024.2.0-Linux-x86_64/share/upmem/license/: open_source_licenses.txt
sdk/upmem-2024.2.0-Linux-x86_64/share/upmem/lldb/: host-lldb-attach-dpu
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/: .clang-format-pattern  compile_commands.json  load.sh
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/api/: CMakeLists.txt
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/api/include/api/: dpu.h
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/api/src/: dpu_elf.c  dpu_error.c  dpu_loader.c  dpu_management.c  dpu_memory.c  dpu_rank_handler_allocator.c  dpu_runner.c
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/api/src/api/: dpu_bank_interface_pmc.c  dpu_jni.c  dpu_memory.c  dpu_polling.c
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/api/src/api/include/: dpu_thread_job.h
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/api/src/include/: dpu_internals.h
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/commons/src/: dpu_chip_description.c
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/hw/src/rank/: hw_dpu_rank.c  hw_dpu_sysfs.c  hw_dpu_sysfs.h
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/python/dpu/: ffi.py
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/python/dpu/vpd/: vpd.py
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/ufi/: .clang-format-pattern  CMakeLists.txt
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/ufi/src/: ufi_debug.c  ufi_rank_utils.h
sdk/upmem-2024.2.0-Linux-x86_64/src/backends/vpd/src/: dpu_flash_partition.h
sdk/upmem-2024.2.0-Linux-x86_64/src/dpu-rt/src/syslib/: mram_unaligned.c
